# resolve

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE-NOTE.txt  LICENSE.txt  Makefile  README.md  mkdocs.yml  versions.json
klee/resolve/: CMakeLists.txt  EnhancedFacts.hpp  Facts.hpp  LLVMFacts.hpp  NodeID.hpp
klee/tools/klee/: CMakeLists.txt  main.cpp
libresolve/: Cargo.toml  README.md  rust-toolchain.toml
libresolve/src/: buffer_writer.rs  lib.rs  remediate.rs  shadowobjs.rs  trace.rs
llvm-plugin/: CMakeLists.txt  Makefile
llvm-plugin/src/: AnnotateFunctions.cpp  CMakeLists.txt  DlsymHook.cpp  EnhancedFacts.cpp  EnhancedFacts.hpp  Facts.hpp  LLVMFacts.hpp  NodeID.hpp  ObjHook.cpp
llvm-plugin/src/CVEAssert/: CVEAssert.cpp  CVEAssert.hpp  README.md  Vulnerability.hpp  Worklist.hpp  arith_san.cpp  arith_san.hpp  bounds_check.cpp  bounds_check.hpp  helpers.cpp  helpers.hpp  null_ptr.cpp  null_ptr.hpp  uaf_san.cpp  uaf_san.hpp  undesirableop.cpp  undesirableop.hpp
llvm-plugin/test/test_annotate_functions/: Makefile
llvm-plugin/test/test_cveassert/: Makefile  debug.c  debug.ll  debug_broken.ll  debug_llvm.c  div_vulns.json  div_zero.c  div_zero_function_ex.ll.test  stack_free.ll  vulns.json
llvm-plugin/test/test_cveassert/spatial_safety/: Makefile  funct_multvars.c  funct_multvars.ll  memcpy_oob.ll  multvars.ll  oob_multvars.c  resolve_log_189.out
llvm-plugin/tests/: div_zero_no_remed.c
llvm-plugin/tests/regression/: div_zero.c  div_zero_no_remed.c  div_zero_rec.c  heap_oob.c  lit.cfg.py  memcpy_oob.c  oob_no_remed.c  overflow_add.c  overflow_add_no_remed.c  stack_oob.c
llvm-plugin/tests/regression/vulnerabilities/: div_zero_rec_vuln.json  div_zero_vuln.json  heap_oob.json  overflow_add_vuln.json  stack_oob.json
llvm-plugin/tests/test_annotate_functions/: Makefile  test.c  test2.c  test3.c  test4.c
llvm-plugin/tests/test_cveassert/: DEBUG_APP_CrashCmd.ll  debug_broken.c  div_zero.ll  div_zero_function_ex.c  div_zero_function_ex.ll  stack_free.c
llvm-plugin/tests/test_cveassert/spatial_safety/: malloc_example.c  malloc_example.ll  memcpy_oob.c  multvars.c  oob.c  oob.ll  (+2 more)
llvm-plugin/tests/vulnerabilities/: overflow_add_vuln.json
mcp/example/src/: CMakeLists.txt  main.c
reach/: CMakeLists.txt  Config.cmake.in  Makefile  README.md
reach/include/reach/: binary_heap.hpp  distmap.hpp  facts.hpp  graph.hpp  search.hpp  util.hpp
reach/lib/: CMakeLists.txt  binary_heap.hpp  distmap.cpp  distmap.hpp  facts.cpp  facts.hpp  graph.cpp  graph.hpp  search.cpp  search.hpp  util.cpp  util.hpp
reach/libs/reach/: distmap.cpp  facts.cpp  graph.cpp  search.cpp  util.cpp
reach/src/: CMakeLists.txt  config.hpp  main.cpp
reach/src/lib/: binary_heap.hpp  cache.hpp  distmap.hpp  facts.cpp  search.cpp
resolve-cc/: CMakeLists.txt  Makefile
resolve-cc/hooks/: CMakeLists.txt  DlsymHook.cpp  ObjHook.cpp
resolve-cc/linker/: AnalysisEngine_linkmap.py  link-facts.sh
resolve-cc/resolve-facts-pass/: CMakeLists.txt
resolve-cc/src/: ResolveFactsPlugin.cpp  ResolveFactsPlugin.hpp  ResolveFactsPluginPass.cpp
resolve-cli/: CMakeLists.txt  README.md  pyproject.toml  something.c
resolve-cli/src/resolve/: __main__.py  cli.py  get_facts.py  reach.py  remediate.py  version.py
resolve-cveassert/: .gitignore  CMakeLists.txt  Makefile  README.md  resolvecc
resolve-cveassert/libresolve/: CMakeLists.txt  Cargo.toml  README.md  mi_shim.c  mimalloc_shadow.c
resolve-cveassert/libresolve/src/: build.rs  file.rs  lib.rs  provenance.rs  remediate.rs  shadowobjs.rs
resolve-cveassert/src/: ArithmeticSanitizer.cpp  ArithmeticSanitizer.hpp  BoundsCheck.cpp  BoundsCheck.hpp  CVEAssert.cpp  CVEAssert.hpp  Contract.hpp  FreeNonHeapMem.cpp  FreeNonHeapMem.hpp  IRUtils.cpp  IRUtils.hpp  InstrumentAllocators.cpp  NullPointerSanitizer.cpp  NullPointerSanitizer.hpp  OperationMasking.cpp  OperationMasking.hpp  Remediation.hpp  Vulnerability.hpp  VulnerabilityParser.cpp  VulnerabilityParser.hpp  arith_san.cpp  arith_san.hpp  bounds_check.cpp  bounds_check.hpp  helpers.cpp  helpers.hpp  instrument.cpp  instrument.hpp  nonheap_free.cpp  nonheap_free.hpp  null_ptr.cpp  null_ptr.hpp  undesirableop.cpp  undesirableop.hpp
resolve-cveassert/tests/: buffer_overflow.c  div_zero.c  div_zero_rec.c  lit.cfg.py  memcpy_oob.c  memset_oob.c  resolve-juliet.py  safe_memset.c  stack_loop_oob.c  stack_oob.c
resolve-cveassert/tests/juliet/: .gitignore  resolve_juliet.py  resolve_juliet_log.txt
resolve-cveassert/tests/lit/: .gitignore  .lit_test_times.txt  buffer_overflow.c  div_zero.c  div_zero_no_remed.c  div_zero_rec.c  global_oob.c  global_ro_oob.c  heap_oob.c  lit.cfg.py  memcpy_oob.c  memset_oob.c  oob_no_remed.c  overflow_add.c  overflow_add_no_remed.c  overflow_widen.c  safe_memset.c  stack_loop_oob.c  vla_oob.c
resolve-cveassert/tests/phoronix/: .gitignore  README.md
resolve-cveassert/tests/vulnerabilities/: buffer_overflow.json  div_zero_vuln.json  overflow_add_vuln.json  safe_memset.json  stack_loop_oob.json
resolve-facts/: CMakeLists.txt  Config.cmake.in  Makefile  README.md
resolve-facts/include/reach/: distmap.hpp  search.hpp
resolve-facts/include/resolve_facts/: resolve_facts.hpp
resolve-facts/include/resolve_facts_llvm/: LLVMFacts.hpp  resolve_facts_llvm.hpp
resolve-facts/libs/reach/: distmap.cpp  facts.cpp  graph.cpp  search.cpp
resolve-facts/libs/resolve_facts/: CMakeLists.txt  resolve_facts.cpp
resolve-facts/libs/resolve_facts_llvm/: CMakeLists.txt  resolve_facts_llvm.cpp
resolve-facts/rs/: Cargo.toml  cbindgen.toml
resolve-facts/rs/src/: builder.rs  lib.rs  main.rs  model.rs  utils.rs  writer.rs
resolve-facts/src/: resolve_facts.cpp  resolve_facts.hpp
resolve-facts/src/reach/: config.hpp  main.cpp
resolve-facts/src/read_props/: main.cpp
resolve-patch/sample/: .gitignore  CMakeLists.txt  README.md  build.sh  main.c  vulnerabilities.json
resolve-triage/: CMakeLists.txt  pyproject.toml  resolve-triage.py
resolve-triage/input-synthesis/: README.md  agent.py  improve_CVE.py  reachability.py  run_all.py  setup.py
(+296 files in other folders)
