cargo-features = ["edition2024", "profile-rustflags"]

[package]
name = "resolve"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.174"


[profile.debug-enhancedfacts]
inherits = "dev"
rustflags = ["-Z", "llvm-plugins=/home/srosefield/projects/EBOSS/github_resolve/llvm-plugin/build/libEnhancedFacts.so"]#, "-C", "passes=enhanced-facts"]

