[project]
name = "resolve-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "univers>=31.1.0",
]

[project.scripts]
resolve = "resolve.cli:main"
resolve-reach = "resolve.reach:main"
resolve-input-synthesis = "resolve.input_synthesis.__main__:main"
resolve-input-synthesis-setup = "resolve.input_synthesis.setup:main"
resolve-input-synthesis-run-all = "resolve.input_synthesis.run_all:main"
resolve-input-synthesis-improve-cve = "resolve.input_synthesis.improve_CVE:main"
resolve-input-synthesis-reachability = "resolve.input_synthesis.reachability:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "resolve"
